# aura_core

./: .gitignore  Architecture_Guide.md  Cargo.toml  README.md  audio_collector.py  auracore_gui.py  auracore_interactive.py  create_baseline_models.py  cuda_test.py  evaluator.py  main.py  prepare_dataset.py  preprocess_data.py  realtime_runner.py  requirements.txt  setup_auracore.py  trainer.py
auracore/: ai_worker.py  ui.py
auracore/ai/: model.py
docs/: Day 2.md
src/: __init__.py  audio.rs  lib.rs  state.rs
src/ai/: __init__.py  feature_extractor.py  mastering_model.py  prediction_model.py
src/core/: __init__.py  audio_analyzer.py  dsp.py  dsp_engine.py
src/data/: data_generator.py
src/dsp/: dynamics.rs  eq.rs  mod.rs
src/realtime/: __init__.py  audio_buffer.py
